--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap');
 
 html {
     font-family: 'Mukta';
