--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap');
-
-html {
-    font-family: 'Mukta';
-}
-
 img {
     display: unset;
     width: unset;
@@ -14,6 +8,6 @@ body {
     font-family: "brandon-grotesque", sans-serif;
 }
 
-li {
-    font-size: 14px;
+li, p {
+    font-size: 18px;
 }
