--- a/src/templates/LowDownNittyGritty.module.css
+++ b/src/templates/LowDownNittyGritty.module.css
@@ -10,12 +10,12 @@ h2 {
 }
 
 p {
-    font-weight: 100;
+    font-weight: normal;
     color: #373F49;
 }
 
 li {
-    font-weight: 100;
+    font-weight: normal;
     color: #373F49;
 }
 
