--- a/src/templates/LowDownNittyGritty.module.css
+++ b/src/templates/LowDownNittyGritty.module.css
@@ -19,26 +19,33 @@ li {
     color: #373F49;
 }
 
+.wrapper {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .container {
-    background: #FFFFFF;
+    background: transparent;
     border-radius: 15px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.109512);
-    padding-left: 2%;
-    padding-top: 2%;
     padding-bottom: 2%;
 }
 
-.heroContainer {
+.heroImg {
+    width: 1180px;
+    height: 490px;
+    position: fixed;
+    object-fit: cover;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    margin-left: -2%;
-    margin-top: -2%;
-    height: 300px;
+    transition: height .2s;
 }
 
-.heroImg {
-    width: 100%;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    max-height: 100%;
+.content {
+    margin-top: 490px;
+    margin-bottom: 200px;
+    padding: 3% 5%;
 }
