--- a/src/templates/LowDownNittyGritty.module.css
+++ b/src/templates/LowDownNittyGritty.module.css
@@ -28,7 +28,6 @@ li {
 }
 
 .container {
-    background: transparent;
     border-radius: 15px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.109512);
     padding-bottom: 2%;
@@ -48,4 +47,16 @@ li {
     margin-top: 490px;
     margin-bottom: 200px;
     padding: 3% 5%;
+}
+
+.cardAnimation {
+    transition: all .2s;
+}
+
+.cardAnimation:hover img {
+    transform: scale(1.07);
+}
+
+.cardAnimation:hover p {
+    font-size: 22px;
 }
